# grizzly

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  config.yml  path_interations.py  pyproject.toml  setup.cfg
.github/workflows/: docker_hello_world_example.yml  pylint.yml
admin/: app.py  requirements.txt
admin/templates/: base.html  index.html
auto_docs/grizzly_main/: index.html  path_interations.html
auto_docs/grizzly_main/admin/: app.html  index.html
auto_docs/grizzly_main/api/: index.html  main.html
auto_docs/grizzly_main/deploy/: grizzly_cli_deploy.html  index.html
auto_docs/grizzly_main/deploy/docker_github_actions_example/: hello_world.html  index.html  test_hello_world.html
auto_docs/grizzly_main/deploy/spark/: index.html
auto_docs/grizzly_main/iac_pulumi/: index.html  pulumi_rest_api_functions.html
auto_docs/grizzly_main/iac_pulumi/aws/: index.html
auto_docs/grizzly_main/iac_pulumi/azure/: index.html
auto_docs/grizzly_main/iac_pulumi/gcp/: index.html
auto_docs/grizzly_main/orchestrator/: index.html
auto_docs/grizzly_main/orchestrator/tasks/: index.html
auto_docs/grizzly_main/orchestrator/util/: index.html
auto_docs/grizzly_main/test/: index.html  test_dummy.html
deploy/dev/hdfs/: deploy_hdfs_standalone.sh
deploy/dev/spark/: build.sh  docker-compose.yml  install.sh  pyproject.toml
deploy/dev/spark/cloud/poc_spark_emr_serverless/: analyse_emr_job.py  config.py  main.py  pyspark_example.py  stop_emr_app.py  trigger_emr_job.py
deploy/dev/spark/cloud/poc_spark_emr_serverless/build_venv/: .push_env_to_s3.sh  Dockerfile  README.txt
deploy/dev/spark/cloud/poc_spark_emr_serverless/code_examples/: extreme_weather.py  simple_example.py
deploy/dev/spark/local/: build.sh  run_pyspark_example.py
deploy/dev/spark/local/spark_cluster/: README.md
deploy/dev/spark/local/spark_cluster/docker/: jupyterlab.Dockerfile  spark-base.Dockerfile
deploy/dev/spark/local/spark_cluster/examples/: pyspark_example_1.py  pyspark_example_2.py
deploy/dev/spark/local/spark_cluster/utils/: spark_context.py
deploy/dev/spark/pyspark_examples/: example_1.py  pyspark_example_1.py  pyspark_example_3.py  pyspark_example_dict.py
deploy/dev/spark/spark_cluster/docker/: cluster-base.Dockerfile  jupyterlab.Dockerfile  spark-base.Dockerfile  spark-master.Dockerfile  spark-worker.Dockerfile
deploy/dev/spark/spark_cluster/examples/: pyspark_example_1.py  pyspark_example_2.py
deploy/dev/spark/spark_cluster/utils/: spark_cluster_context_config.py  spark_context.py
deploy/dev/spark/utils/: spark_context.py
grizzly/: grizzly_examples_cli.py
grizzly/api/: main.py
grizzly/deploy/: grizzly_deploy_examples_cli.py
grizzly/deploy/spark/local/: run_pyspark_example.py
grizzly/deploy/spark/pyspark_examples/: pyspark_example_dict.py
grizzly/deploy/spark/utils/: spark_context.py  spark_local_cluster_context_config.py
grizzly_main/: path_interations.py
grizzly_main/admin/: app.py
grizzly_main/api/: main.py
grizzly_main/deploy/: grizzly_cli_deploy.py  grizzly_deploy_examples_cli.py
grizzly_main/deploy/docker_github_actions_example/: Dockerfile  README.md  test_hello_world.py
grizzly_main/deploy/spark/local/: run_pyspark_example.py
grizzly_main/grizzly_ignore/: aws_ignore  azure_ignore  gcp_ignore  grizzly_main_ignore
grizzly_main/iac_pulumi/: pulumi_rest_api_functions.py
grizzly_main/orchestrator/: requirements.txt
grizzly_main/orchestrator/prefect_poc/: README.md
grizzly_main/test/: test_dummy.py
(+121 files in other folders)
