[tool.poetry]
name = "grizzly"
version = "0.1.2"
description = "MAD Consulting - Grizzly"
authors = ["victor-vila <victor.vila.navazo@gmail.com>"]
packages = [{include = "grizzly_main"}]

# TODO - In the future we can use multiple dependency groups / extras, if we start adding lots of dependencies
# which might not be required for all the subprojects within the grizzly_main repo
[tool.poetry.dependencies]
# Spark local dependencies
python = ">=3.8, <=3.11"
pyspark = "3.3.0"
numpy = "1.23.4"
docker-compose = "1.29.2"
jupyterlab = "3.4.8"
# Pulumi dependencies
pulumi = ">=3.0.0,<4.0.0"
pulumi-aws = ">=5.0.0,<6.0.0"
# Spark EMR Serverless dependencies
botocore = "1.29.13"
boto3 = "1.26.12"
tomlkit = "0.11.6"
typer = "0.7.0"
rich = "13.3.1"
"ruamel.yaml" = "0.17.21"
seedir =  "0.4.2"

[build-system]
requires = ["poetry-core>=1.2.0b3"]
build-backend = "poetry.core.masonry.api"
