[tool.poetry]
name = "spark-cluster"
version = "0.1.0"
description = "Spark Cluster with docker-compuse using Bitnami images"
authors = ["victor-vila <victor.vila.navazo@gmail.com>"]
packages = [{include = "spark_cluster"}]

[tool.poetry.dependencies]
python = ">=3.8"
pyspark = "3.3.0"
numpy = "1.23.4"
docker-compose = "1.29.2"
jupyterlab = "3.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
